fix/up: add jmx case